--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -44,8 +44,7 @@ $main_text_color: #616c82;
         justify-content: stretch;
         background-color: $modal_background;
         background-clip: padding-box;
-        border: 1px solid rgba(0, 0, 0, .2);
-        border-radius: .3rem;
+        border-radius: 15px;
         outline: 0;
         color: $main_text_color;
         @media (min-width: $small_screen_width) {
