--- a/src/app/chat-modal/chat-modal.component.html
+++ b/src/app/chat-modal/chat-modal.component.html
@@ -10,18 +10,22 @@
                 </div>
                 <div class="column-title">Продукты</div>
                 <div *ngFor="let group of groups" [class.active]="group.id == this.groupId" class="group-block pointer" (click)="selectGroup(group.id)">
-                    <div>{{ group.title }}</div>
-                    <div>{{ formatGroupTime(group) }}</div>
-                    <div><fa-icon [icon]="['fas', 'arrow-right']"></fa-icon> {{ group.org }}</div>
-                    <ng-container *ngIf='group.postsCount > 0'>
-                        <fa-icon [icon]="['fas', 'comment-alt']"></fa-icon> <span>{{ group.postsCount }}</span>
-                    </ng-container>
+                    <div class="group-title">{{ group.title }}</div>
+                    <div class="group-time"><span>{{ formatGroupTime(group) }}</span></div>
+                    <div class="group-org">
+                        <fa-icon [icon]="['fas', 'arrow-right']" class="group-arrow"></fa-icon>
+                        <span class="group-org-name"> {{ group.org }} </span></div>
+                    <div class="group-mess" *ngIf='group.postsCount > 0'>
+                        <fa-icon [icon]="['fas', 'comment-alt']" class="mess_icon"></fa-icon> 
+                        <span class="mess_count">{{ group.postsCount }}</span>
+                    </div>
                     <!--fa-icon [icon]="['fas', 'exclamation-triangle']"></fa-icon -->
                 </div>
             </div>
             <div class="modal-body">
-                
-                    <div class="modal-body-messages" #postsEl [scrollTop]="scrolltop">
+                <div class="modal-body-wrapper">
+                    <div class="error-message" *ngIf='this.errorDB'> Необходимо запустить БД: npm run json-server </div>
+                    <div class="modal-body-messages" *ngIf='!this.errorDB' #postsEl [scrollTop]="scrolltop">
                         <ng-container *ngFor="let post of posts; let i = index">
                             <div *ngIf="i == 0 || formatDate(post) != formatDate(posts[i-1])" class="post-date">
                                 {{ formatDate(post) }}
@@ -33,7 +37,7 @@
                             </div>
                         </ng-container>
                     </div>
-                
+                </div>
                 <div class="modal-body-bottom">
                     <div class="modal-body-edit">
                         <textarea rows="2" (keyup.enter)="postMessage()" placeholder="Введите текст сообщения..." [(ngModel)]="newMessage"></textarea>
