--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -7,6 +7,12 @@ $modal_max_height: 800px;
 $post_sended_color: #e8eaf1;
 $post_received_color: #fff;
 $main_text_color: #616c82;
+$message_text_color: black;
+$post_date_color: #999;
+$black_text: black;
+$gray_text: #b7becb;
+$icon_color: #acb5c3;
+$counter_background: #e8eaf1;
 
 .modal-container {
     position: fixed;
@@ -17,9 +23,10 @@ $main_text_color: #616c82;
     background: $modal_container_background;
     display: flex;
     align-items: center;
-    align-content: center; 
-    justify-content: center;    
+    align-content: center;
+    justify-content: center;
     z-index: 1050;
+
     @media (min-width: $small_screen_width) {
         padding: 30px;
     }
@@ -28,13 +35,14 @@ $main_text_color: #616c82;
         position: relative;
         width: 100%;
         height: 100%;
+
         @media (min-width: $small_screen_width) {
             max-width: 1500px;
             max-height: $modal_max_height;
             margin: 30px auto;
         }
     }
-    
+
     .modal-content {
         position: relative;
         height: 100%;
@@ -47,20 +55,23 @@ $main_text_color: #616c82;
         border-radius: 15px;
         outline: 0;
         color: $main_text_color;
+        overflow-y: hidden;
+
         @media (min-width: $small_screen_width) {
             box-shadow: 0 5px 15px $modal_container_background;
         }
 
         .modal-left-column {
-            //background-color: coral;
             min-width: 25%;
+
             .modal-header {
                 position: relative;
                 text-transform: uppercase;
                 font-size: 1.2em;
                 font-weight: 600;
-                padding: 20px 10px;                
+                padding: 20px 10px;
                 border-bottom: 1px solid $modal_background_active;
+
                 .close-cross {
                     display: block;
                     position: absolute;
@@ -71,6 +82,7 @@ $main_text_color: #616c82;
                     line-height: 0.5em;
                 }
             }
+
             .column-title {
                 padding: 16px 30px;
                 text-transform: uppercase;
@@ -78,66 +90,158 @@ $main_text_color: #616c82;
                 font-weight: bold;
                 text-align: left;
             }
+
             .group-block {
                 padding: 10px;
                 margin-left: 16px;
+                border-radius: 6px 0 0 6px;
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                font-weight: 500;
+                font-size: 0.9em;
+                .group-title, .group-org {                    
+                    flex: 2 0 40%;
+                    padding: 5px;
+                    text-align: left;
+                }
+                .group-time, .group-mess {                    
+                    flex: 1 0 30%;
+                    padding: 5px;
+                    text-align: right;
+                }
+
+                .group-org {
+                    .group-arrow {
+                        color: $gray_text;
+                        font-size: 0.8em
+                    }
+                    .group-org-name {
+                        color: $black_text;
+                        margin-left: 8px;
+                    }
+                }
+
+                .group-mess {
+                    .mess_icon {
+                        color: $icon_color;
+                    }
+                    .mess_count {
+                        margin-left: 6px;
+                        background-color: $counter_background;
+                        border-radius: 50%;
+                        padding: 3px;
+                        font-weight: 700;
+                        font-size: .8em;
+                    }
+                }
+                
             }
+
             .active {
                 background-color: $modal_background_active;
             }
         }
-    
+
         .modal-body {
-            //background-color: aqua;
             display: flex;
             flex-flow: column nowrap;
             align-content: stretch;
-            justify-content: stretch;    
+            justify-content: stretch;
             width: 100%;
-            .modal-body-messages {
+
+            .modal-body-wrapper {
                 background-color: $modal_background_active;
+                padding-top: 15px;
                 height: 100%;
-                overflow-y: auto;
-                .post-date {
-                    clear: both;
-                }
-                .post {
-                    padding: 10px;
-                    margin: 10px 20px;
-                    max-width: 75%;
-                    clear: both;
-                    .post-signature {
+                overflow-y: hidden;
+                .modal-body-messages {
+                    height: 100%;
+                    padding: 0 25px;
+                    overflow-y: auto;
+
+                    .post-date {
+                        clear: both;
+                        color: $post_date_color;
+                        margin: 25px 0;
+                        font-size: .9em;
+                        overflow: hidden;
+                        text-align: center;
+                        position: relative;
+                        span {
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                    }
+                    .post-date:before, .post-date:after {
+                        content: "";
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 100%;
+                        height: 1px;
+                        background-color: $post_date_color;
+                        position: relative;
+                    }
+                    .post-date:before {
+                        margin-left: -100%;
+                        left: -14px;
+                    }
+                    .post-date:after {
+                        margin-right: -100%;
+                        right: -14px;
+                    }
+
+                    .post {
+                        padding: 15px;
+                        margin: 10px 0;
+                        max-width: 75%;
+                        font-size: .9em;                        
+                        clear: both;
+
+                        .post-signature {                            
+                            float: left;
+                        }
+
+                        .post-time {
+                            margin-left: 30px;
+                            float: right;
+                        }
+
+                        .post-text {
+                            clear: both;
+                            color: $message_text_color;
+                            padding-top: 15px;
+                            text-align: left;
+                        }
+                    }
+
+                    .post-sended {
+                        background-color: $post_sended_color;
+                        border: 2px solid $post_sended_color;
+                        border-radius: 0 10px 10px 10px;
                         float: left;
                     }
-                    .post-time {
-                        margin-left: 30px;
+
+                    .post-received {
+                        background-color: $post_received_color;
+                        border: 2px solid $post_sended_color;
+                        border-radius: 10px 10px 0 10px;
                         float: right;
                     }
-                    .post-text {
-                        clear: both;
-                        text-align: left;
-                    }
-                }
-                .post-sended {
-                    background-color: $post_sended_color;
-                    border: 2px solid $post_sended_color;
-                    float: left;
-                }
-                .post-received {                    
-                    background-color: $post_received_color;
-                    border: 2px solid $post_sended_color;
-                    float: right;
                 }
             }
+
             .modal-body-bottom {
                 .modal-body-edit {
                     padding: 16px 50px 0 0;
+
                     textarea {
                         width: 100%;
                         padding: 10px;
                         font-size: 0.9em;
                     }
                 }
+
                 .modal-body-controls {
                     padding: 10px 10px 20px 0;
                     display: flex;
@@ -146,14 +250,17 @@ $main_text_color: #616c82;
                     text-transform: uppercase;
                     font-size: 0.8em;
                     font-weight: bold;
+
                     .modal-body-control {
                         line-height: 1.5em;
                     }
+
                     .control-link {
                         margin: 10px;
                         padding: 4px 0;
                         border-bottom: solid 1px;
                     }
+
                     .button {
                         padding: 10px;
                         margin-right: 20px;
@@ -169,6 +276,10 @@ $main_text_color: #616c82;
     cursor: pointer;
     background-color: $modal_background_active;
     box-shadow: 0 1px 3px $modal_container_background;
+    :active {
+        box-shadow: none;
+        transform: translate(2px, 2px);
+    }
 }
 
 .button.disabled {
@@ -177,20 +288,20 @@ $main_text_color: #616c82;
     pointer-events: none;
 }
 
-.button:active {
-    box-shadow: none;
-    transform: translate(2px, 2px);
-}
-
 .push {
     margin-left: auto;
 }
 
 a.link {
     cursor: pointer;
-    font-size: 2em;    
+    font-size: 2em;
 }
 
-.pointer{
+.pointer {
     cursor: pointer;
 }
+
+.error-message {
+    color: red;    
+}
+
