--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -163,7 +163,7 @@ $counter_background: #e8eaf1;
                     .post-date {
                         clear: both;
                         color: $post_date_color;
-                        margin: 25px 0;
+                        padding: 20px 0;
                         font-size: .9em;
                         overflow: hidden;
                         text-align: center;
@@ -276,11 +276,13 @@ $counter_background: #e8eaf1;
     cursor: pointer;
     background-color: $modal_background_active;
     box-shadow: 0 1px 3px $modal_container_background;
-    :active {
-        box-shadow: none;
-        transform: translate(2px, 2px);
-    }
 }
+
+.button:active {
+    box-shadow: none;
+    transform: translate(2px, 2px);
+}
+
 
 .button.disabled {
     cursor: none;
