финальные стилевые правки

--- a/src/app/chat-modal/chat-modal.component.html
+++ b/src/app/chat-modal/chat-modal.component.html
@@ -45,15 +45,15 @@
                     <div class="modal-body-controls">
                         <div class="modal-body-control control-link">
                             <fa-icon [icon]="['fas', 'paperclip']"></fa-icon>
-                            Загрузить файл
+                            <span class="control-title">Загрузить файл</span>
                         </div>
                         <div class="modal-body-control control-link">
                             <fa-icon [icon]="['far', 'file']"></fa-icon>
-                            Создать запрос
+                            <span class="control-title">Создать запрос</span>
                         </div>
                         <div class="modal-body-control control-link">
                             <fa-icon [icon]="['fas', 'signature']"></fa-icon>
-                            Запустить подписание договора
+                            <span class="control-title">Запустить подписание договора</span>
                         </div>
                         <div class="modal-body-control push button" 
                             (click)="postMessage()"
