--- a/src/app/chat-modal/chat-modal.component.scss
+++ b/src/app/chat-modal/chat-modal.component.scss
@@ -153,22 +153,26 @@ $counter_background: #e8eaf1;
 
             .modal-body-wrapper {
                 background-color: $modal_background_active;
-                padding-top: 15px;
+                padding: 15px 0;
                 height: 100%;
                 overflow-y: hidden;
                 .modal-body-messages {
                     height: 100%;
                     padding: 0 25px;
                     overflow-y: auto;
+                    display: flex;
+                    flex-flow: column;
 
                     .post-date {
-                        clear: both;
                         color: $post_date_color;
                         padding: 20px 0;
                         font-size: .9em;
+                        display: block;
                         overflow: hidden;
                         text-align: center;
                         position: relative;
+                        flex-shrink: 0;
+                        
                         span {
                             display: inline-block;
                             vertical-align: middle;
@@ -196,21 +200,18 @@ $counter_background: #e8eaf1;
                         padding: 15px;
                         margin: 10px 0;
                         white-space: pre-wrap;
-                        max-width: 75%;
-                        font-size: .9em;                        
-                        clear: both;                        
-
-                        .post-signature {                            
-                            float: left;
-                        }
+                        max-width: 85%;
+                        font-size: .9em;
+                        display: flex;
+                        justify-content: space-between;
+                        flex-wrap: wrap;
 
                         .post-time {
-                            margin-left: 30px;
-                            float: right;
+                            margin-left: 30px;                            
                         }
 
                         .post-text {
-                            clear: both;
+                            flex-basis: 100%;                            
                             color: $message_text_color;
                             padding-top: 15px;
                             text-align: left;
@@ -220,15 +221,15 @@ $counter_background: #e8eaf1;
                     .post-sended {
                         background-color: $post_sended_color;
                         border: 2px solid $post_sended_color;
-                        border-radius: 0 10px 10px 10px;
-                        float: left;
+                        border-radius: 0 10px 10px 10px;                        
+                        align-self: flex-start;
                     }
 
                     .post-received {
                         background-color: $post_received_color;
                         border: 2px solid $post_sended_color;
                         border-radius: 10px 10px 0 10px;
-                        float: right;
+                        align-self: flex-end;
                     }
                 }
             }
@@ -262,6 +263,9 @@ $counter_background: #e8eaf1;
                         margin: 10px;
                         padding: 4px 0;
                         border-bottom: solid 1px;
+                        .control-title {
+                            padding-left: 7px;
+                        }
                     }
 
                     .button {
